# 02_syn_data

./: README.md  pyproject.toml
configs/: refactor_v1.yaml  refactor_v2.yaml
configs/eval/: relbench_amazon.yaml
configs/eval/db/: relbench-amazon.yaml  relbench-avito.yaml  relbench-event.yaml  relbench-f1.yaml  relbench-hm.yaml  relbench-stack.yaml  relbench-trial.yaml
configs/eval/task/: relbench_amazon.yaml  relbench_event.yaml  relbench_f1.yaml  relbench_hm.yaml
configs/local/: local.yaml
scripts/eval/: config.sh  relbench.sh  relbench_all.sh
scripts/v1/: 01_schema.sh  02_instance.sh  03_task.sh  04_rdbpfn_export.sh  04b_router_train.sh  04c_router_eval.sh  05_routed_h5.sh  06_tfm_train.sh  generate_v1.sh  generate_v2.sh
src/rdb_prior/: artifacts.py  cli.py  config.py  eval_config.py  observability.py  pipeline.py  runtime.py
src/rdb_prior.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rdb_prior/compilation/: __init__.py  compiler.py  model.py
src/rdb_prior/evaluation/: __init__.py  relbench.py  router.py
tests/: test_blueprint_sampler.py  test_config.py  test_eval_config.py  test_extensions.py  test_feature_generation.py  test_feature_strategies.py  test_h5_export.py  test_identity_compiler.py  test_instance_planner.py  test_motifs.py  test_observability.py  test_pipeline.py  test_rdbpfn_export.py  test_relation_generation.py  test_relbench_import.py  test_roles.py  test_runtime.py  test_schema_graph.py  test_sparse_router.py  test_spec.py  test_task_generation.py  test_validation.py
(+56 files in other folders)
