[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rdb-prior"
version = "0.1.0"
description = "Role-aware synthetic relational schema generation"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "PyYAML>=6.0"]

[project.scripts]
rdb-prior = "rdb_prior.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
