[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rdb-prior"
version = "0.1.0"
description = "Role-aware synthetic relational schema generation"
requires-python = ">=3.10"
dependencies = ["h5py>=3.8", "numpy>=1.24", "PyYAML>=6.0"]

[project.optional-dependencies]
router = ["torch>=2.2"]

[project.scripts]
rdb-prior = "rdb_prior.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
